added quiz feature

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>DefineIt</h1>
-    <!-- <button id="quiz">Start Quiz</button> -->
+    <button class="quiz-button">Quiz</button>
+    <div id="quiz"></div>
     <div id="flashcards"></div>
     <script type="module" src="/scripts/popup.js"></script>
 </body>
